Fix rules page overlap w/featured posts

--- a/source/_base.scss
+++ b/source/_base.scss
@@ -2430,3 +2430,7 @@ p.tagline {
 #srList table {
     margin: 5px;
 }
+
+.subreddit-rules-page {
+    margin-top: 80px;
+}
